data/all_generated_tests/raw_wast_tests/if_IncorrectBranchTargetResolution_1296.wast
;; 7. **Test for Complex Nested Blocks with Multiple `if` Conditions**:    Assemble a series of nested blocks wherein each block contains various `if` conditions and corresponding `br` instructions. Ensure all branches resolve accurately to their intended targets.    - **Constraint**: Ensure correct branching amidst indeterminate levels of nested instructions.    - **Expectation**: Branch instructions jump precisely to scoped levels.

(assert_invalid
  (module 
    (func $nested-if-test (result i32)
      (block (result i32)
        (if (result i32) (i32.const 1)
          (then 
            (block (result i32)
              (if (result i32) (i32.const 0)
                (then (br 1 (i32.const 2)))
                (else (br 0 (i32.const 3)))
              )
              (i32.const 4)
            )
          )
          (else 
            (block (result i32)
              (if (result i32) (i32.const 1)
                (then (br 0 (i32.const 5)))
                (else (i32.const 6))
              )
              (i32.const 7)
            )
          )
        )
      )
    )
  )
  "type mismatch"
)